# pkg/openapi/server.spec.yaml
@@ -1012,7 +1012,93 @@ paths:
       - oauth2Authentication: []
       responses:
         '200':
-          $ref: '#/components/responses/allocationsResponse'
+          $ref: '#/components/responses/allocationListResponse'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '404':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/notFoundResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+    post:
+      x-hidden: true
+      description: |-
+        Creates an allocation.
+      security:
+      - oauth2Authentication: []
+      requestBody:
+        $ref: '#/components/requestBodies/allocationCreateRequest'
+      responses:
+        '201':
+          $ref: '#/components/responses/allocationResponse'
+        '400':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/badRequestResponse'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '409':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/conflictResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+  /api/v1/organizations/{organizationID}/allocations/{allocationID}:
+    description: |-
+      Management of allocations.  Allocations form slices of quotas and in total never
+      exceed the quotas in the scope the quota is defined for.  Individual services will
+      create allocations when a request for infrastructure is received to check that
+      request can be fulfilled, then release those resources when the infrastructure is
+      deleted.
+    parameters:
+    - $ref: '#/components/parameters/organizationIDParameter'
+    - $ref: '#/components/parameters/allocationIDParameter'
+    get:
+      x-hidden: true
+      description: |-
+        Gets an allocation.
+      security:
+      - oauth2Authentication: []
+      responses:
+        '200':
+          $ref: '#/components/responses/allocationResponse'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '404':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/notFoundResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+    put:
+      x-hidden: true
+      description: |-
+        Updates an allocation.
+      security:
+      - oauth2Authentication: []
+      requestBody:
+        $ref: '#/components/requestBodies/allocationUpdateRequest'
+      responses:
+        '200':
+          $ref: '#/components/responses/allocationResponse'
+        '400':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/badRequestResponse'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '404':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/notFoundResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+    delete:
+      x-hidden: true
+      description: |-
+        Deletes an allocation.
+      security:
+      - oauth2Authentication: []
+      responses:
+        '202':
+          description: Allocation successfully deleted.
         '401':
           $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
         '403':
@@ -2181,6 +2267,18 @@ components:
       properties:
         quotas:
           $ref: '#/components/schemas/quotaWriteList'
+    # This `allOf` relies on the config.yaml having the option `old-merge-behavior` set, which embedded fields
+    # for refs, rather than inlining the referenced type's fields. See
+    #     https://github.com/oapi-codegen/oapi-codegen/blob/main/pkg/codegen/configuration.go#L175
+    allocationResourceMetadata:
+      description: Resource metadata for an allocation, which can be org- or project-scoped
+      allOf:
+      - $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/organizationScopedResourceReadMetadata'
+      - type: object
+        properties:
+          projectId:
+            description: The project identifier the resource belongs to.
+            type: string
     resourceAllocation:
       description: A single quota but taking into account dynamic allocation.
       type: object
@@ -2227,10 +2325,10 @@ components:
       - spec
       properties:
         metadata:
-          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/projectScopedResourceReadMetadata'
+          $ref: '#/components/schemas/allocationResourceMetadata'
         spec:
           $ref: '#/components/schemas/allocationSpec'
-    allocations:
+    allocationListRead:
       description: A list of allocations.
       type: array
       items:
@@ -2246,6 +2344,64 @@ components:
           $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/resourceWriteMetadata'
         spec:
           $ref: '#/components/schemas/allocationSpec'
+    allocationCreateSpec:
+      description: Request parameters for creating an allocation.
+      type: object
+      required:
+      - projectId
+      - kind
+      - id
+      - allocations
+      properties:
+        projectId:
+          description: The project ID that owns this allocation.
+          type: string
+        kind:
+          description: The resource kind that owns this allocation.
+          type: string
+        id:
+          description: The resource ID that owns this allocation.
+          type: string
+        allocations:
+          $ref: '#/components/schemas/resourceAllocationList'
+    allocationCreate:
+      description: An allocation creation request.
+      type: object
+      required:
+      - metadata
+      - spec
+      properties:
+        metadata:
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/resourceWriteMetadata'
+        spec:
+          $ref: '#/components/schemas/allocationCreateSpec'
+    allocationUpdateSpec:
+      description: Request parameters for updating an allocation.
+      type: object
+      required:
+        - kind
+        - id
+        - allocations
+      properties:
+        kind:
+          description: The resource kind that owns this allocation.
+          type: string
+        id:
+          description: The resource ID that owns this allocation.
+          type: string
+        allocations:
+          $ref: '#/components/schemas/resourceAllocationList'
+    allocationUpdate:
+      description: An allocation update request.
+      type: object
+      required:
+      - metadata
+      - spec
+      properties:
+        metadata:
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/resourceWriteMetadata'
+        spec:
+          $ref: '#/components/schemas/allocationUpdateSpec'
   requestBodies:
     authorizationRequest:
       description: OIDC authentication request.
@@ -2450,6 +2606,47 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/allocationWrite'
+          example:
+            metadata:
+              name: undefined
+            spec:
+              kind: kubernetescluster
+              id: a4e7fddc-4812-4bfa-94b4-2b1174ac7e0e
+              allocations:
+              - kind: clusters
+                committed: 1
+                reserved: 0
+              - kind: servers
+                committed: 3
+                reserved: 10
+    allocationCreateRequest:
+      description: Creates a resource allocation.
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/allocationCreate'
+          example:
+            metadata:
+              name: undefined
+            spec:
+              projectId: e36c058a-8eba-4f5b-91f4-f6ffb983795c
+              kind: kubernetescluster
+              id: a4e7fddc-4812-4bfa-94b4-2b1174ac7e0e
+              allocations:
+              - kind: clusters
+                committed: 1
+                reserved: 0
+              - kind: servers
+                committed: 3
+                reserved: 10
+    allocationUpdateRequest:
+      description: Updates a resource allocation.
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/allocationUpdate'
           example:
             metadata:
               name: undefined
@@ -2886,12 +3083,12 @@ components:
               displayName: Clusters
               description: All cluster types e.g. Kubernetes, compute, etc.
               default: 5
-    allocationsResponse:
+    allocationListResponse:
       description: A list of allocations.
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/allocations'
+            $ref: '#/components/schemas/allocationListRead'
           example:
           - metadata:
               id: ee45f34b-9685-40d8-8724-23c31252ca46
