# pkg/openapi/types.go
@@ -187,17 +187,74 @@ type AclProject struct {
 // AclProjectList A list of projects the subject is a member of.
 type AclProjectList = []AclProject
 
+// AllocationCreate An allocation creation request.
+type AllocationCreate struct {
+	// Metadata Metadata required for all API resource reads and writes.
+	Metadata externalRef0.ResourceWriteMetadata `json:"metadata"`
+
+	// Spec Request parameters for creating an allocation.
+	Spec AllocationCreateSpec `json:"spec"`
+}
+
+// AllocationCreateSpec Request parameters for creating an allocation.
+type AllocationCreateSpec struct {
+	// Allocations A list of quotas.
+	Allocations ResourceAllocationList `json:"allocations"`
+
+	// Id The resource ID that owns this allocation.
+	Id string `json:"id"`
+
+	// Kind The resource kind that owns this allocation.
+	Kind string `json:"kind"`
+
+	// ProjectId The project ID that owns this allocation.
+	ProjectId string `json:"projectId"`
+}
+
+// AllocationListRead A list of allocations.
+type AllocationListRead = []AllocationRead
+
 // AllocationRead An allocation of resources.
 type AllocationRead struct {
-	// Metadata Metadata required by project scoped resource reads.
-	Metadata externalRef0.ProjectScopedResourceReadMetadata `json:"metadata"`
+	// Metadata Resource metadata for an allocation, which can be org- or project-scoped
+	Metadata AllocationResourceMetadata `json:"metadata"`
 
 	// Spec A set of resource allocations.
 	Spec AllocationSpec `json:"spec"`
 }
 
+// AllocationResourceMetadata defines model for allocationResourceMetadata.
+type AllocationResourceMetadata struct {
+	// Embedded struct due to allOf(https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/organizationScopedResourceReadMetadata)
+	externalRef0.OrganizationScopedResourceReadMetadata `yaml:",inline"`
+	// Embedded fields due to inline allOf schema
+	// ProjectId The project identifier the resource belongs to.
+	ProjectId *string `json:"projectId,omitempty"`
+}
+
 // AllocationSpec A set of resource allocations.
 type AllocationSpec struct {
+	// Allocations A list of quotas.
+	Allocations ResourceAllocationList `json:"allocations"`
+
+	// Id The resource ID that owns this allocation.
+	Id string `json:"id"`
+
+	// Kind The resource kind that owns this allocation.
+	Kind string `json:"kind"`
+}
+
+// AllocationUpdate An allocation update request.
+type AllocationUpdate struct {
+	// Metadata Metadata required for all API resource reads and writes.
+	Metadata externalRef0.ResourceWriteMetadata `json:"metadata"`
+
+	// Spec Request parameters for updating an allocation.
+	Spec AllocationUpdateSpec `json:"spec"`
+}
+
+// AllocationUpdateSpec Request parameters for updating an allocation.
+type AllocationUpdateSpec struct {
 	// Allocations A list of quotas.
 	Allocations ResourceAllocationList `json:"allocations"`
 
@@ -216,9 +273,6 @@ type AllocationWrite struct {
 	// Spec A set of resource allocations.
 	Spec AllocationSpec `json:"spec"`
 }
-
-// Allocations A list of allocations.
-type Allocations = []AllocationRead
 
 // AuthMethod Supported authentication methods.
 type AuthMethod string
@@ -879,11 +933,11 @@ type UserIDParameter = string
 // AclResponse A list of access control scopes and permissions.
 type AclResponse = Acl
 
+// AllocationListResponse A list of allocations.
+type AllocationListResponse = AllocationListRead
+
 // AllocationResponse An allocation of resources.
 type AllocationResponse = AllocationRead
-
-// AllocationsResponse A list of allocations.
-type AllocationsResponse = Allocations
 
 // GroupResponse A group when read.
 type GroupResponse = GroupRead
@@ -955,8 +1009,14 @@ type UserinfoResponse = Userinfo
 // UsersResponse A list of users.
 type UsersResponse = Users
 
+// AllocationCreateRequest An allocation creation request.
+type AllocationCreateRequest = AllocationCreate
+
 // AllocationRequest An allocation of resources.
 type AllocationRequest = AllocationWrite
+
+// AllocationUpdateRequest An allocation update request.
+type AllocationUpdateRequest = AllocationUpdate
 
 // CreateGroupRequest A group when created or updated.
 type CreateGroupRequest = GroupWrite
@@ -999,6 +1059,12 @@ type PostApiV1OrganizationsJSONRequestBody = OrganizationWrite
 
 // PutApiV1OrganizationsOrganizationIDJSONRequestBody defines body for PutApiV1OrganizationsOrganizationID for application/json ContentType.
 type PutApiV1OrganizationsOrganizationIDJSONRequestBody = OrganizationWrite
+
+// PostApiV1OrganizationsOrganizationIDAllocationsJSONRequestBody defines body for PostApiV1OrganizationsOrganizationIDAllocations for application/json ContentType.
+type PostApiV1OrganizationsOrganizationIDAllocationsJSONRequestBody = AllocationCreate
+
+// PutApiV1OrganizationsOrganizationIDAllocationsAllocationIDJSONRequestBody defines body for PutApiV1OrganizationsOrganizationIDAllocationsAllocationID for application/json ContentType.
+type PutApiV1OrganizationsOrganizationIDAllocationsAllocationIDJSONRequestBody = AllocationUpdate
 
 // PostApiV1OrganizationsOrganizationIDGroupsJSONRequestBody defines body for PostApiV1OrganizationsOrganizationIDGroups for application/json ContentType.
 type PostApiV1OrganizationsOrganizationIDGroupsJSONRequestBody = GroupWrite
